# ompi

orte/mca/regx/compress/: Makefile.am  regx_compress.c  regx_compress.h  regx_compress_component.c
orte/mca/regx/none/: Makefile.am  regx_none.c  regx_none.h  regx_none_component.c
oshmem/shmem/c/: shmem_free.c
